--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -23,7 +23,7 @@ log4j.appender.Console.layout.ConversionPattern=%d{YYYY-MM-dd HH:mm:ss.SSS} %p %
 #
 #
 log4j.appender.File=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.File.File=${catalina.base}/logs/log4j.log
+log4j.appender.File.File=./logs/log4j.log
 log4j.appender.File.Encoding=UTF-8
 log4j.appender.File.DatePattern='.'yyyy-MM-dd'.log'
 log4j.appender.File.Threshold=INFO
